--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -4,11 +4,14 @@
 	margin-left: 100px;
 }
 
+#titulo{
+	font-family: Arial, Helvetica, sans-serif;
+}
 #casa {
 	width: 8em;
 	position: absolute;
-	top: 300px;
-	left: 900px;
+	top: 50px;
+	left: 1200px;
 }
 
 #campo {
