--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,7 +1,7 @@
 #cachorro {
 	width: 8em;
-	margin-top: 95%;
-	margin-left: 10%;
+	margin-top: 400px;
+	margin-left: 100px;
 }
 
 #titulo{
@@ -10,8 +10,8 @@
 #casa {
 	width: 8em;
 	position: absolute;
-	top: 2%;
-	left: 85%;
+	top: 300px;
+	left: 900px;
 }
 
 #campo {
